Sidebar: Fix spacing

--- a/src/design-system/Avatar/Avatar.css
+++ b/src/design-system/Avatar/Avatar.css
@@ -15,6 +15,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-shrink: 0;
 }
 
 .avatar img {
